# J-Engine

./: .gitattributes  .gitignore  JEngine.sln  LICENSE  README.md  imgui.ini
J-Engine/: .gitignore  README.md  imgui.ini
J-Engine/cmake/: FindASSIMP.cmake
J-Engine/executable/shaderfiles/: terrain.gs  volumelight.fs  volumelight.vs
J-Engine/lib/: glfw3.lib
J-Engine/shaderfiles/: bloom.fs  lighting.fs  lighting.vs
J-Engine/src/: Bloom.cpp  Helpers.cpp  Helpers.h  SSAO.cpp  ShaderBuilder.h  Terrain.h  Water.cpp  Window.h  main.cpp
JEngine/: .gitignore  CMakeLists.txt  JEngine.vcxproj  JEngine.vcxproj.filters  README.md  imgui.ini
JEngine/Debug/: vc141.idb  vc142.idb
JEngine/Debug/JEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  JEngine.lastbuildstate  JEngine.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
JEngine/cmake/: FindGLFW3.cmake
JEngine/executable/: imgui.ini
JEngine/executable/shaderfiles/: bloom.vs  blur.fs  lighting.fs  normal.fs  normal.vs  shadowDepth.vs  ssao.fs  ssao.vs  terrain.fs  terrain.tesc  water.gs  water.tesc
JEngine/shaderfiles/: blur.fs  blur.vs  light.fs  normal.fs  normal.vs  shadowDepth.fs  shadowDepth.vs  terrain.gs  terrain.tese  volumelight.fs  water.fs
JEngine/src/: CMakeLists.txt  Mesh.h  Model.cpp  Model.h  Shader.h  View.cpp  VolumeLight.cpp  VolumeLight.h  Water.h
executable/: imgui.ini
executable/shaderfiles/: blur.vs  blur2.fs  light.vs  shadowDepth.fs  terrain.tese  terrain.vs  water.tese
include/glad/: glad.h
shaderfiles/: bloom.vs  light.fs  light.vs  occlusion.fs  ssao.fs  terrain.fs  terrain.tesc  terrainEmpty.fs
src/: Bloom.cpp  Bloom.h  Camera.cpp  Camera.h  Engine.cpp  Engine.h  Helpers.cpp  Helpers.h  Mesh.cpp  Mesh.h  Model.h  SSAO.cpp  SSAO.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  ShaderBuilder.cpp  ShaderBuilder.h  Skybox.cpp  Skybox.h  Terrain.cpp  Terrain.h  View.h  VolumeLight.cpp  VolumeLight.h  Water.cpp  Water.h  Window.cpp  Window.h  main.cpp
